made OLF fit for deployment in cloudfoundry